# ParserTaskOOP

./: CommandAST.hpp  CommandRegistry.hpp  InputHandler.cpp  InputHandler.hpp  InputReader.hpp  OutputHandler.cpp  OutputHandler.hpp  Parser.cpp  Parser.hpp  Program.cpp  ProgramExecuter.cpp  ProgramExecuter.hpp  README.md  SemanticValidator.hpp  SyntaxValidator.cpp  Tokenizer.cpp  Tokenizer.hpp  Validator.cpp  jj.json  nn.json  out.json  out1.json  out2.json  out3.json  output.ppx  output2.ppx  output3.ppx  output4.ppx  prog  test.ppx
Archive (Old)/: Accumulator.cpp  Actions.cpp  DeserializerVisitor.cpp  InputReader.cpp  InscribedRectangleCalc.cpp  InscribedRectangleCalc.hpp  Item.hpp  ItemLeafBuilder.cpp  Parser.hpp  SaveLoad.cpp  SaveLoad.hpp  ShapeTextVisitor.hpp  fileCustom.ppx  text.txt
Miscellaneous/: text.json
PowerPointProject/: CMakeLists.txt  Program.cpp
PowerPointProject/Application/: Application.cpp  Application.hpp  IApplication.hpp
PowerPointProject/CLI/: Command.cpp  Command.hpp  CommandFactory.cpp  CommandFactory.hpp  CommandHistory.cpp  CommandHistory.hpp  Controller.cpp  Controller.hpp  IController.hpp  Parser.cpp  Parser.hpp  Validator.cpp  Validator.hpp
PowerPointProject/Data/: Document.cpp  Document.hpp  IDGenerator.cpp  IDGenerator.hpp  IDocument.hpp  IVisitor.hpp  ItemAttributes.cpp  ItemAttributes.hpp  ItemBase.cpp  ItemBase.hpp  ItemBuilder.cpp  ItemBuilder.hpp  Slide.cpp  Slide.hpp
PowerPointProject/Data/Item/: IItemVisitor.hpp  ItemAttributes.cpp  ItemBase.cpp  ItemBase.hpp  ItemBuilder.cpp  ItemBuilder.hpp
PowerPointProject/Director/: Actions.cpp  Actions.hpp  Director.cpp  Director.hpp  IAction.hpp  IDirector.hpp
PowerPointProject/Include/: IAction.hpp  IController.hpp  IDirector.hpp  IDocument.hpp  IItemVisitor.hpp  IShape.hpp  ITextDisplayable.hpp  IVisitor.hpp  IVisualDisplayable.hpp
PowerPointProject/Renderer/: ConsoleRendering.cpp  ConsoleRenderingVisitor.cpp  ConsoleRenderingVisitor.hpp  Format.cpp  Format.hpp  IShape.hpp  ITextDisplayable.hpp  IVisualDisplayable.hpp  QtConverter.cpp  QtConverter.hpp  Renderer.cpp  Renderer.hpp  ShapeBase.cpp  ShapeBase.hpp  ShapeLibrary.cpp  ShapeLibrary.hpp  TextFontAdjuster.cpp  TextFontAdjuster.hpp  VisualRendering.cpp  VisualRenderingVisitor.cpp  VisualRenderingVisitor.hpp
PowerPointProject/Renderer/Formatting/: DimentionConverter.cpp  DimentionConverter.hpp  Format.cpp  Format.hpp  FormatLibrary.cpp  FormatLibrary.hpp
PowerPointProject/Renderer/Shape/: ICloneable.hpp  IShape.hpp  IShapeVisitor.hpp  ITextDisplayable.hpp  IVisualDisplayable.hpp  InnerMarginConstant.cpp  InnerMarginConstant.hpp  InnerRectangleCalcualtor.cpp  InnerRectangleCalcualtor.hpp  InscribedRectangleCalc.hpp  InscribedRectangleCalculator.cpp  InscribedRectangleCalculator.hpp  ShapeBase.cpp  ShapeBase.hpp  ShapeLibrary.cpp  ShapeLibrary.hpp  ShapeText.cpp  ShapeText.hpp  ShapeTextVisitor.cpp  ShapeTextVisitor.hpp  TextMargins.cpp  TextMargins.hpp
PowerPointProject/Renderer/VisualConversion/: QtConverter.cpp  QtConverter.hpp  TextFontAdjuster.cpp  TextFontAdjuster.hpp
PowerPointProject/Serialization/: Converter.cpp  Converter.hpp  Deserializer.cpp  Deserializer.hpp  DeserializerVisitor.cpp  DeserializerVisitor.hpp  JsonConverter.cpp  JsonConverter.hpp  SaveLoad.cpp  SaveLoad.hpp  Serializer.cpp  Serializer.hpp  SerializerVisitor.cpp  SerializerVisitor.hpp
PowerPointProject/TextFiles/: _notes.txt  draw.txt  text.txt  text2.txt
PowerPointProject/UI/: CommandPane.cpp  CommandPane.hpp  Controller.cpp  Controller.hpp  MainWindow.cpp  MainWindow.hpp
ShapeParser/: Accumulator.cpp  Accumulator.hpp  CMakeLists.txt  Command.cpp  Command.hpp  Converter.cpp  Converter.hpp  Document.cpp  Document.hpp  Executer.cpp  Executer.hpp  Item.cpp  Item.hpp  ItemAttributes.hpp  OutputPrinter.cpp  OutputPrinter.hpp  Parser.cpp  Parser.hpp  Program.cpp  SaveLoad.hpp  SaveLoadSerializer.cpp  SaveLoadSerializer.hpp  Slide.cpp  Slide.hpp  Validator.cpp  Validator.hpp  View.cpp  View.hpp  _notes.txt  fileCustom.ppx  prog  program  t.txt  text.txt  text2.txt  valgrind-out.txt
ShapeParser/Application/: Application.cpp  Application.hpp  IApplication.hpp
ShapeParser/CLI/: ActionHistory.cpp  ActionHistory.hpp  Command.cpp  Command.hpp  Controller.cpp  Controller.hpp  Executer.cpp  Executer.hpp  IController.hpp  Parser.cpp  Parser.hpp  Validator.cpp  Validator.hpp
ShapeParser/Data/: Document.cpp  Document.hpp  IDocument.hpp  IItem.hpp  ISlide.hpp  Item.cpp  Item.hpp  ItemAttributes.hpp  ItemBase.cpp  ItemBase.hpp  ItemLeafBuilder.cpp  ItemLeafBuilder.hpp  Slide.cpp  Slide.hpp  View.cpp  View.hpp
ShapeParser/Director/: ActionHistory.cpp  ActionHistory.hpp  Actions.cpp  Actions.hpp  Director.cpp  Director.hpp  IAction.hpp  IDirector.hpp  Renderer.cpp  Renderer.hpp  UndoRedo.cpp  UndoRedo.hpp
ShapeParser/Include/: IAction.hpp  IApplication.hpp  IController.hpp  IDirector.hpp  IDocument.hpp  IItem.hpp  IRenderer.hpp  ISlide.hpp
ShapeParser/Interfaces/: IController.hpp  IDirector.hpp  IModifierAction.hpp  IRenderer.hpp  IRendererAction.hpp
ShapeParser/Renderer/: IRenderer.hpp  IShape.hpp  Renderer.cpp  Renderer.hpp  ShapeBase.cpp  ShapeBase.hpp
ShapeParser/Serialization/: Converter.cpp  Converter.hpp  SaveLoad.cpp  SaveLoad.hpp
ShapeParser/TextFiles/: _notes.txt  text.txt  valgrind-out.txt
(+23 files in other folders)
